--- a/code/app/andriod/Laundry/res/layout/more.xml
+++ b/code/app/andriod/Laundry/res/layout/more.xml
@@ -37,7 +37,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="329dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/linearLayout1"
@@ -46,8 +46,7 @@
             <ListView
                 android:id="@+id/misp_info_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:divider="@null" >
 
