--- a/code/app/andriod/Laundry/res/layout/misp_grid_item.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_grid_item.xml
@@ -19,7 +19,8 @@
         android:layout_below="@+id/misp_grid_item_img"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="休闲娱乐" 
-        android:textSize="12dp"/>
+        android:text="休闲娱乐"
+        android:textColor="@color/backcolor"
+        android:textSize="12dp" />
 
 </RelativeLayout>
