--- a/code/app/andriod/Laundry/res/layout/misp_upgrage_page.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_upgrage_page.xml
@@ -21,7 +21,7 @@
             android:layout_height="200dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/upgrate_image" />
 
     </RelativeLayout>
 
