--- a/code/app/andriod/Laundry/res/layout/order_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_list_item.xml
@@ -85,31 +85,34 @@
                         android:src="@drawable/icon_cloth" />
                 </RelativeLayout>
 
-               
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                     >
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/tab_icon_more_pressed" />
-                </RelativeLayout>
-
                   <RelativeLayout
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:gravity="right" >
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/forward_sm" />
+                              <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="false"
+            android:layout_centerVertical="true"
+            android:gravity="right|center" >
+
+            <TextView
+                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="详情"
+                android:textColor="@color/blue_light" />
+
+            <ImageView
+                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/forward_sm" />
+
+        </LinearLayout>
+                      
+ 
 
                 </RelativeLayout>
 
