--- a/code/app/andriod/Laundry/res/layout/user_info_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/user_info_edit.xml
@@ -45,41 +45,12 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_sel"
-                    android:hint="真实姓名"
-                    android:paddingLeft="20dp"
+                    android:hint="(必填项)"
+                    android:paddingLeft="10dp"
                     android:textSize="14dp" />
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp" >
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/user_user_name"
-                    android:textColor="@color/black"
-                    android:textSize="14dp" />
-
-                <EditText
-                    android:id="@+id/user_user_nickname_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/edittext_sel"
-                    android:hint="真实姓名"
-                    android:paddingLeft="20dp"
-                    android:textSize="14dp" />
-
-            </LinearLayout>
+ 
               <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -104,7 +75,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/edittext_sel"
                     android:hint="性别"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="10dp"
                     android:textSize="14dp" />
 
             </LinearLayout>
@@ -134,8 +105,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_sel"
-                    android:hint="生日"
-                    android:paddingLeft="20dp"
+                    android:hint="选填项"
+                    
+                    android:paddingLeft="10dp"
                     android:textSize="14dp" />
 
             </LinearLayout>
@@ -164,8 +136,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_sel"
-                    android:hint="手机号码"
-                    android:paddingLeft="20dp"
+                    android:hint="必填项"
+                    
+                    android:paddingLeft="10dp"
                     android:textSize="14dp" />
 
             </LinearLayout>
@@ -195,66 +168,89 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_sel"
-                    android:hint="邮箱"
-                    android:paddingLeft="20dp"
+                    android:hint="选填项"
+                    android:paddingLeft="10dp"
                     android:textSize="14dp" />
 
             </LinearLayout>
             
            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp" >
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" >
 
                 <TextView
                     android:layout_width="60dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="60dp"
                     android:gravity="center"
                     android:text="@string/user_user_addr"
                     android:textColor="@color/black"
                     android:textSize="14dp" />
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="70dp" >
-
-                    <EditText
-                        android:id="@+id/user_user_addr_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittext_sel"
-                        android:gravity="center_vertical|top"
-                        android:hint="常用地址"
-                        android:paddingBottom="10dp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="10dp"
-                        android:textSize="14dp" />
-
-                    <Button
-                        android:id="@+id/user_set_location_addr_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_alignBottom="@id/user_user_addr_text"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginBottom="1dp"
-                        android:layout_marginRight="1dp"
-                        android:background="@color/blue_light"
-                        android:drawableRight="@drawable/icon_gps"
-                        android:padding="5dp"
-                        android:text="定位"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/content_font_size_sm" />
-
-                </RelativeLayout>
+                <EditText
+                    android:id="@+id/user_user_addr_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+    
+                    android:hint="选填项"
+                    android:lines="2"
+                    android:paddingLeft="10dp"
+                    android:textSize="12dp" />
+                <Button
+                   android:id="@+id/user_set_location_addr_btn"
+                   android:layout_width="60dp"
+                   android:layout_height="45dp"
+                     android:gravity="center"
+ 
+                   android:drawableLeft="@drawable/icon_gps"
+                   android:background="@drawable/common_btn"
+                   android:text="定位"
+                   android:textColor="@color/white"
+                   android:textSize="14dp" />
 
             </LinearLayout>
+ 
+          
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" 
+                android:visibility="invisible">
 
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/user_user_email"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
+
+                <EditText
+                     
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="邮箱"
+                    android:paddingLeft="10dp"
+                    android:textSize="14dp" />
+
+            </LinearLayout>
         </LinearLayout>
  
  
